--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 								</symbol>
 							</use>
 						</svg>
-						<p>+375(44) 7654336</p>
-						<p>+375(44) 5473830</p>
+						<a href="#">+375(44) 7654336</a>
+						<a href="#">+375(44) 5473830</a>
 					</div>
 				</div>
 			</div>
