--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 			<div class="container">
 				<div class="window">
 					<div class="row">
-						<div class="title col-lg-8 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-delay="0.5s" data-wow-duration="2s">
+						<div class="title col-lg-8 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-delay="0.1s" data-wow-duration="2s">
 							<h1>Тонировка окон<br><span>для квартир, офисов, загородных домов</span></h1>
 						</div>
-						<div class="button col-lg-4 col-lg-offset-0 col-xs-offset-3 col-xs-6 wow fadeIn" data-wow-delay="1.5s" data-wow-duration="2.5s">
+						<div class="button col-lg-4 col-lg-offset-0 col-xs-offset-3 col-xs-6 wow fadeIn" data-wow-delay="0.7s" data-wow-duration="2.5s">
 							<a href="#" class="show_popup">Заказать</a>
 						</div>
 					</div>
 					<div class="row">
-						<div class="subtitle col-xs-12 wow fadeIn" data-wow-delay="2s" data-wow-duration="3s">
+						<div class="subtitle col-xs-12 wow fadeIn" data-wow-delay="1.5s" data-wow-duration="3s">
 							<p>Свяжитесь с нами по телефону и наш замерщик выедет к Вам БЕСПЛАТНО!</p>
 						</div>
 					</div>
@@ -68,7 +68,7 @@
 				</div>
 				<div class="row">
 					<div class="advantages">
-						<div class="advantages__text col-sm-3 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-duration="2s" data-wow-delay="0.9s">
+						<div class="advantages__text col-sm-3 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-duration="2s" data-wow-delay="2.2s">
 							<svg class="icon icon-hour-glass">
 								<use xlink:href="#icon-hour-glass">
 									<symbol id="icon-hour-glass" viewBox="0 0 32 32">
@@ -80,7 +80,7 @@
 							<h3><span>Быстро</span></h3>
 							<p>Не успеете и глазом моргнуть<br>как наши специалисты<br>затонируют Ваши окна</p>
 						</div>
-						<div class="advantages__text col-sm-3 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-duration="2s" data-wow-delay="0.6s">
+						<div class="advantages__text col-sm-3 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-duration="2s" data-wow-delay="2s">
 							<svg class="icon icon-checkmark2">
 								<use xlink:href="#icon-checkmark2">
 									<symbol id="icon-checkmark2" viewBox="0 0 32 32">
@@ -92,7 +92,7 @@
 							<h3><span>Качественно</span></h3>
 							<p>Мы работаем только<br> с качественными материалами</p>
 						</div>
-						<div class="advantages__text col-sm-3 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-duration="2s" data-wow-delay="0.3s">
+						<div class="advantages__text col-sm-3 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-duration="2s" data-wow-delay="1.8s">
 							<svg class="icon icon-home3">
 								<use xlink:href="#icon-home3">
 									<symbol id="icon-home3" viewBox="0 0 32 32">
@@ -104,7 +104,7 @@
 							<h3><span>Долговечно</span></h3>
 							<p>Наша тонировка будет служить<br>Вам долгие года</p>
 						</div>
-						<div class="advantages__text col-sm-3 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-duration="2s">
+						<div class="advantages__text col-sm-3 col-xs-12 wow bounceInLeft" data-wow-offset="200" data-wow-duration="2s" data-wow-delay="1.6s">
 							<svg class="icon icon-coin-dollar">
 								<use xlink:href="#icon-coin-dollar">
 									<symbol id="icon-coin-dollar" viewBox="0 0 32 32">
@@ -152,7 +152,7 @@
 								<i class="fa fa-check" aria-hidden="true"></i>
 								<p>Тонировочная пленка делает ваши стекла безопасными. Даже если ваше стекло разбилось, вы не поранитесь осколками так как все осколки останутся прикленными к пленке.</p>
 							</div>
-							<div class="why__text col-md-4 col-xs-12 wow fadeIn" data-wow-delay="1.3s" data-wow-duration="2s" data-wow-offset="50">
+							<div class="why__text col-md-4 col-xs-12 wow fadeIn" data-wow-delay="1.3s" data-wow-duration="2s">
 								<i class="fa fa-check" aria-hidden="true"></i>
 								<p>Благодаря тонировке окна 99,9% вредных ультрафиолетовых лучей отражается.</p>
 							</div>
@@ -169,7 +169,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="examples col-xs-12 wow zoomIn" data-wow-delay="0.7s" data-wow-duration="1s" data-wow-offset="50">
+					<div class="examples col-xs-12 wow zoomIn" data-wow-delay="0.7s" data-wow-duration="1s" data-wow-offset="150">
 						<div id="foobar">
 							<div><img src="img/ton/1.jpg" alt="окна"></div>
 							<div><img src="img/ton/2.jpg" alt="окна"></div>
@@ -192,7 +192,7 @@
 				</div>
 				<div class="row">
 					<div class="reviews col-xs-12">
-						<div class="reviews__text col-md-4 col-xs-12 wow rollIn" data-wow-delay="0.2s" data-wow-duration="1.5s" data-wow-offset="50">
+						<div class="reviews__text col-md-4 col-xs-12 wow rollIn" data-wow-delay="0.2s" data-wow-duration="1.5s" data-wow-offset="150">
 							<img src="img/photo/2.jpg" alt="фото">
 							<span>Константин, 45 лет</span>
 							<p>Спасибо ребятам! Приехали, оперативно справились, работу выполнили на 10 баллов. Теперь сижу в "тонировке" и полностью доволен. Буду рекомендовать друзьям и знакомым.</p>
@@ -259,7 +259,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="application col-xs-12 wow rollIn" data-wow-delay="0.2s" data-wow-duration="1.5s" data-wow-offset="50">
+					<div class="application col-xs-12 wow rollIn" data-wow-delay="0.2s" data-wow-duration="1.5s" data-wow-offset="150">
 						<form method="post" id="form1">
 							<h4>Оставьте вашу заявку и наш менеджер свяжется с Вами:</h4>
 							<input type="text" name="name" placeholder="Ваше имя" required>
